unpackaged/objects/ConnectRemote__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Conexões remotas</description>
    <fields>
        <fullName>Bearer__c</fullName>
        <label>Bearer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Senha</description>
        <label>Password</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL da conexão</description>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Nome do usuário</description>
        <label>Username</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Connect Remote</label>
</CustomObject>